[lcn] Improve measurement value processing with modules before 2013
- Fix mixup of TVar and R1Var/R2Var with modules before 2013 if there is another bus member beside openHAB which requests measurement values (which is actually not allowed)
- Fix initial processing of R1Var/R2Var setpoints with modules before 2013. They were updated only when changed externally.

Signed-off-by: Fabian Wolter <github@fabian-wolter.de>